--- a/lab1/khanacademy/Wishlist.html
+++ b/lab1/khanacademy/Wishlist.html
@@ -6,8 +6,7 @@
     </head>
     <body>
         <ol>
-            <li>Be among happy people</li>
-            <li>Find my rib</li>
+            <li>Become rich, not wishlist though, but rather an aim</li>
             <li>Have a good relationship with my friends and have some good friends</li>
         </ol>
         
