--- a/selfpracticeweb/web.html
+++ b/selfpracticeweb/web.html
@@ -23,6 +23,7 @@
 <html>
     <head>
         <title>Yersultan's Website</title>
+        <link rel="icon" type="image/x-icon" href="https://www.freepik.com/icon/video_3049280#fromView=family&page=1&position=2&uuid=a7e61a10-a3ac-4553-bef6-ab194b1982a3">
     </head>
 
     <body style="background-color:bisque">
@@ -67,5 +68,6 @@
 
         <p align="center">My goal making this cite is to <q>harness my education</q></p>
         <p align="center"><abbr title="Kazakh-British Technical University">KBTU</abbr> is the university i am studying at</p>
+        <p style="border:2px solid blue;">Border lining</p>
     </body>
 </html>
