--- a/lab1/khanacademy/WritePoem.html
+++ b/lab1/khanacademy/WritePoem.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Anuar</h1>
+        <h1>Yersultan</h1>
             <p>
             Just waked up in a morning gotta thank God <br>
             I don't know but today seems kinda odd <br>
