--- a/lab2/task3/github.html
+++ b/lab2/task3/github.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Pricing</title>
+    <title>GitHub</title>
     <link rel="stylesheet" href="style3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,7 +77,8 @@
                 </details>
             </div>
         </div>
-        <div class="card">
+        <div class="card recommended">
+            <div class="badge">RECOMMENDED</div>
             <h2>Enterprise</h2>
             <p>Security, compliance,<br>and flexible deployment</p>
             <div class="price">
@@ -108,46 +109,54 @@
         </section>
 
         <section class="addons">
-            <h2>Additional add-ons</h2>
-            <div class="addon-grid">
-                <div class="addon-card">
-                    <div class="addon-icon"><img src="https://static.thenounproject.com/png/1155091-200.png" height="30px" alt="bot pfp"></div>
-                    <h3>GitHub Copilot</h3>
-                    <p>Get started for free with up to 2,000 completions and 50 chat requests per month.</p>
-                    <a href="#">Compare plans ›</a>
-                </div>
-                <div class="addon-card">
-                    <div class="addon-icon"><img src="https://cdn-icons-png.flaticon.com/512/838/838544.png" height="30px" alt="model pfp"></div>
-                    <h3>GitHub Models</h3>
-                    <p>Bring industry-leading AI into your workflow, securely and with full developer control.</p>
-                    <a href="#">Learn more ›</a>
-                </div>
-                <div class="addon-card">
-                    <div class="addon-icon"><img src="https://cdn-icons-png.flaticon.com/512/547/547380.png" height="30px" alt="shield pfp"></div>
-                    <h3>GitHub Advanced Security</h3>
-                    <p>Gain peace of mind with our security, privacy, and responsible AI policies.</p>
-                    <a href="#">Learn more ›</a>
-                </div>
-                <div class="addon-card">
-                    <div class="addon-icon"><img src="https://cdn-icons-png.flaticon.com/512/4829/4829008.png" height="30px" alt="server pfp"></div>
-                    <h3>GitHub Codespaces</h3>
-                    <p>Starting at $0.18 per hour of compute and $0.07 per GB of storage.</p>
-                    <a href="#">Learn more ›</a>
-                </div>
-                <div class="addon-card">
-                    <div class="addon-icon"><img src="https://cdn-icons-png.flaticon.com/512/2950/2950714.png" height="30px" alt="chat pfp"></div>
-                    <h3>Premium support</h3>
-                    <p>Get expert help for Enterprise Cloud and Enterprise—any hour your team needs it.</p>
-                    <a href="#">Learn more ›</a>
-                </div>
-                <div class="addon-card">
-                    <div class="addon-icon"><img src="https://cdn-icons-png.flaticon.com/512/3151/3151254.png" height="30px" alt="storage pfp"></div>
-                    <h3>Git LFS</h3>
-                    <p>$5 per month for 50 GB bandwidth and 50 GB of storage.</p>
-                    <a href="#">Learn more ›</a>
-                </div>
-            </div>
-        </section>
+  <h2>Additional add-ons</h2>
+
+  <div class="addon-grid">
+
+    <div class="addon-card">
+      <div class="addon-icon">🤖</div>
+      <h3>GitHub Copilot</h3>
+      <p>Get started for free with up to 2,000 completions and 50 chat requests per month.</p>
+      <a href="#">Compare plans ›</a>
+    </div>
+
+    <div class="addon-card">
+      <div class="addon-icon">🧠</div>
+      <h3>GitHub Models</h3>
+      <p>Bring industry-leading AI into your workflow, securely and with full developer control.</p>
+      <a href="#">Learn more ›</a>
+    </div>
+
+    <div class="addon-card">
+      <div class="addon-icon">🛡️</div>
+      <h3>GitHub Advanced Security</h3>
+      <p>Gain peace of mind with our security, privacy, and responsible AI policies.</p>
+      <a href="#">Learn more ›</a>
+    </div>
+
+    <div class="addon-card">
+      <div class="addon-icon">💻</div>
+      <h3>GitHub Codespaces</h3>
+      <p>Starting at $0.18 per hour of compute and $0.07 per GB of storage.</p>
+      <a href="#">Learn more ›</a>
+    </div>
+
+    <div class="addon-card">
+      <div class="addon-icon">💬</div>
+      <h3>Premium support</h3>
+      <p>Get expert help for Enterprise Cloud and Enterprise—any hour your team needs it.</p>
+      <a href="#">Learn more ›</a>
+    </div>
+
+    <div class="addon-card">
+      <div class="addon-icon">📦</div>
+      <h3>Git LFS</h3>
+      <p>$5 per month for 50 GB bandwidth and 50 GB of storage.</p>
+      <a href="#">Learn more ›</a>
+    </div>
+
+  </div>
+</section>
     </main>
 </body>
 </html>
